web config added and test push set

--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ REACT_APP_FIREBASE_DATABASE="https://sympriorizar.firebaseio.com"
 REACT_APP_FIREBASE_PROJECT_ID="sympriorizar"
 REACT_APP_FIREBASE_STORAGE_BUCKET="sympriorizar.appspot.com"
 REACT_APP_FIREBASE_SENDER_ID="701445296141"
+REACT_APP_FIREBASE_ID="1:701445296141:web:ffdc9d3804703b9ac4c544"
